# carPosTracking

./: CMakeLists.txt  README.md  platformio.ini
Container/Postgres/: .env.example  README.md  docker-compose.yml
Container/Postgres/initdb/: 01-enable-postgis.sql
ESP32/: .gitignore  README.md  platformio.ini  sdkconfig.defaults  sdkconfig.ttgo-t7-v14-mini32
ESP32/src/: CMakeLists.txt  main.cpp
ESP32/src/config/: Config.example.h
ESP32/src/crypto/: PayloadCrypto.cpp  PayloadCrypto.h
ESP32/src/gnss/: GnssData.h  GnssModule.h  NmeaParser.cpp
ESP32/src/modem/: Sim7000Modem.cpp
ESP32/src/mqtt/: MqttClient.cpp  MqttClient.h  TelemetryPublisher.cpp  TelemetryPublisher.h
ESP32/src/serial/: SerialPort.cpp  SerialPort.h
ESP32/src/wifi/: WifiManager.h
src/: CMakeLists.txt  main.cpp
src/config/: Config.example.h  Config.h
src/gnss/: CgnsinfParser.cpp  CgnsinfParser.h  GnssModule.cpp  NmeaParser.h
src/modem/: Sim7000Modem.h
src/wifi/: WifiManager.cpp  WifiManager.h
